[gd_scene load_steps=14 format=3 uid="uid://yupxk4j4c6ad"]

[ext_resource type="Script" path="res://UI/EscapeMenu.gd" id="1_a4l44"]
[ext_resource type="Texture2D" uid="uid://dmvpgbhh0busw" path="res://Assets/Icons/DemoLogo2.png" id="3_sx4rt"]
[ext_resource type="FontFile" uid="uid://b1ewf85gd5sbd" path="res://Assets/Inter-VariableFont_slnt,wght.ttf" id="4_d1bd8"]
[ext_resource type="Script" path="res://UI/EscapeMenuButton.gd" id="4_paxft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yckdt"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 2
expand_margin_left = 80.0
expand_margin_top = 60.0
expand_margin_right = 80.0
expand_margin_bottom = 60.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3376u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3a4f0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1gcik"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mc7wy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6puml"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_37pv7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oiq3n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1xdir"]

[node name="EscapeMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a4l44")

[node name="Control" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yckdt")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_sx4rt")
stretch_mode = 5

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
text = "Left CLICK -> jump
Move MOUSE -> lean"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0.117647)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_3376u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3a4f0")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1gcik")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mc7wy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6puml")
text = "> EXIT TO MENU"
script = ExtResource("4_paxft")
nodepath_below = NodePath("../Button2")

[node name="Button2" type="Button" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 0.313726)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0.117647)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_37pv7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_oiq3n")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1xdir")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mc7wy")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6puml")
text = "> EXIT TO DESKTOP"
script = ExtResource("4_paxft")
nodepath_above = NodePath("../Button")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
text = "Sensitivity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
value = 50.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 50.0

[node name="HBox" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
text = "FPS Cap:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Control/MarginContainer/VBoxContainer/VBoxContainer/HBox"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "30"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2

[node name="HSlider" type="CheckButton" parent="Control/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Accessibility Mode"

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.313726)
theme_override_fonts/font = ExtResource("4_d1bd8")
theme_override_font_sizes/font_size = 30
text = "ELAPSED TIME: "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Control/MarginContainer/VBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer2/VolSlider" to="." method="_on_vol_slider_value_changed"]
[connection signal="item_selected" from="Control/MarginContainer/VBoxContainer/VBoxContainer/HBox/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Control/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_toggled"]
